<resources>
    <string name="app_name">MiniSega</string>
    <string name="alumnos">Alumnos</string>
    <string name="grupos">Grupos</string>
    <string name="faltas">Faltas</string>
    <string name="materias">Materias</string>
    <string name="materia">Materia</string>
    <string name="title_activity_alumnos">Alumnos</string>
    <string name="nombre">Nombre</string>
    <string name="apaterno">Apellido Paterno</string>
    <string name="amaterno">Apellido Materno</string>
    <string name="matricula">Matricula</string>
    <string name="carrera">Carrera</string>
    <string name="btnAdd">Agregar</string>
    <string name="alumno">Alumno</string>
    <string name="guardar">Guardar</string>
    <string name="creditos">Creditos</string>
    <string name="registrar">Inscribir Alumno</string>
    <string name="fechaFalta">Fecha de Falta</string>
    <string name="borrar">Borrar</string>
    <string name="regresar">Regresar</string>
</resources>
